# Build system definition
# This tells tools like pip and build to use setuptools to create the package
[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project metadata
[project]
name = "DataraEnv"
version = "0.1.0"
description = "FastAPI-based OpenEnv environment for synthetic data engineering tasks under India's DPDP regime."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}


# Keywords for packaging and discovery
keywords = [
    "fastapi",
    "openenv",
    "synthetic-data",
    "dpdp",
    "privacy",
    "evaluation"
]

# Classifiers help users find the project on PyPI and understand its target environment.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

# Exact runtime dependencies from requirements.txt
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/dataraenv-demo"
Repository = "https://github.com/yourusername/dataraenv-demo.git"
"Bug Tracker" = "https://github.com/yourusername/dataraenv-demo/issues"

# Optional dependencies to group tools for different environments
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "httpx>=0.25.0",
    "types-requests>=2.31.0"
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.25.0"
]
lint = [
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0"
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0"
]

# Optional: define scripts/entry points
# Note: FastAPI/Uvicorn typically runs via the `uvicorn` CLI directly. 
# You can define a script here if you create a python entry point function in the future.
# [project.scripts]
# dataraenv-server = "datara_env.scripts:run_server"
[project.scripts]
openenv-server = "server.app:main"

# Tells setuptools where to find packages
[tool.setuptools.packages.find]
where = ["."]
include = ["datara_env*", "server*"]

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py311']

# Ruff linter configuration
[tool.ruff]
line-length = 88
# Target Python 3.11
target-version = "py311"

# Enable standard rules
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W"   # pycodestyle warnings
]
ignore = []

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=datara_env --cov-report=term-missing"
testpaths = [
    "tests",
]

# Mypy static type checker configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
